--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,15 +1,15 @@
-:partner-solution-project-name: partner-solution-repo-name
-:partner-solution-github-org: aws-quickstart
-:partner-product-name: Full Product Name
-:partner-product-short-name: Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: January
+:partner-solution-project-name: cfn-ps-hashicorp-nomad
+:partner-solution-github-org: aws-ia
+:partner-product-name: Nomad on the AWS Cloud
+:partner-product-short-name: Nomad
+:partner-company-name: HashiCorp, Inc.
+:doc-month: August
 :doc-year: 2023
-:partner-contributors: John Smith, {partner-company-name}
+:partner-contributors: Alex Dadgar, HashiCorp, Inc.
 // :other-contributors: Akua Mansa, Trek10
-:aws-contributors: Janine Singh, AWS IoT Partner team
-:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
-:deployment_time: 15 minutes
+:aws-contributors: Erin McGill and Tony Vattathil, Amazon Web Services
+//:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
+:deployment_time: 35 minutes
 :default_deployment_region: us-east-1
 // :private_repo:
 
