--- a/docs/deployment_guide/partner_editable/troubleshooting.adoc
+++ b/docs/deployment_guide/partner_editable/troubleshooting.adoc
@@ -2,5 +2,24 @@
 
 For troubleshooting common Partner Solution issues, refer to the https://fwd.aws/rA69w?[AWS Partner Solution General Information Guide^] and https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting CloudFormation^].
 
-// == Resources
-// Uncomment section and add links to any external resources that are specified by the partner.
+== Resources
+
+*AWS services*
+
+* Amazon EC2 +
+https://docs.aws.amazon.com/AWSEC2/latest/WindowsGuide/
+* AWS CloudFormation +
+https://aws.amazon.com/documentation/cloudformation/
+* Amazon VPC +
+https://aws.amazon.com/documentation/vpc/
+
+*HashiCorp Nomad*
+
+* Nomad +
+https://www.nomadproject.io/
+* Nomad Enterprise +
+https://www.hashicorp.com/products/nomad/
+* Nomad million container benchmark +
+https://www.hashicorp.com/c1m/
+* Nomad video +
+https://www.youtube.com/watch?v=hllS4Gutams
